<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

  <fragment
      android:id="@+id/navigation_home"
      android:name="com.example.mom_pops.ui.home.HomeFragment"
      android:label="@string/title_home"
      tools:layout="@layout/fragment_home" />

  <fragment
      android:id="@+id/navigation_favorites"
      android:name="com.example.mom_pops.ui.favorites.FavoritesFragment"
      android:label="@string/title_dashboard"
      tools:layout="@layout/fragment_favorites" />

  <fragment
      android:id="@+id/navigation_viewcart"
      android:name="com.example.mom_pops.ui.viewCart.ViewCartFragment"
      android:label="@string/view_carts"
      tools:layout="@layout/activity_view_cart" />
</navigation>