<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1000dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="365dp"
        android:layout_height="162dp"
        android:layout_marginTop="28dp"
        android:background="#4444"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/itemName"
            android:layout_width="199dp"
            android:layout_height="26dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/item_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="79dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/item_price"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemDescription" />

        <ImageView
            android:id="@+id/itemPicture"
            android:layout_width="90dp"
            android:layout_height="71dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_action_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemCalories"
            android:layout_width="87dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/item_calories"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/itemPrice"
            app:layout_constraintTop_toBottomOf="@id/itemDescription" />

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="198dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:text="@string/item_description"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <ImageView
            android:id="@+id/x_icon"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/x_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemRestaurant"
            android:layout_width="321dp"
            android:layout_height="21dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="13dp"
            android:text="@string/item_restaurant"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemPrice" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
